<resources>
  <string name="app_name">钱掌柜盘点专用</string>

  <string name="login">登录</string>
  <string name="user_login">用户登录</string>
  <string name="login_name">请输入用户名</string>
  <string name="login_password">请输入用户密码</string>

  <string name="diablo_test_server">http://192.168.50.127:63552/</string>
  <string name="diablo_production_server">http://120.24.39.174/</string>
  <string-array name="servers">
    <item>深圳服务器</item>
    <item>测试服务器</item>
  </string-array>

  <string-array name="nav_item_activity_titles">
    <item>盘点</item>
    <item>退货</item>
    <!--<item>采购</item>-->
    <!--<item>批售</item>-->
    <!--<item>批退</item>-->
  </string-array>

  <string-array name="fix_device">
    <item>盘点机</item>
    <item>手机</item>
  </string-array>

  <string-array name="thead_fix">
    <item>序号</item>
    <item>条码</item>
    <item>数量</item>
    <item>款号</item>
    <item>色/码</item>
  </string-array>

  <string name="order_id">序号</string>
  <string name="barcode">条码</string>
  <string name="fix_count">数量</string>
  <string name="style_number_brand">款号</string>
  <string name="color_size">色/码</string>
  <!--bottom bar-->
  <string name="title_stock_fix">盘点</string>
  <string name="title_stock_in">采购</string>
  <string name="title_stock_out">退货</string>
  <string name="title_sale_in">批售</string>
  <string name="title_sale_out">批退</string>

  <!--action bar-->
  <string name="save">保存</string>
  <string name="draft">草稿</string>
  <string name="clear_draft">清除草稿</string>
  <string name="select_good_ctype">货品大类</string>
  <string name="fix_device">盘点设备</string>
  <string name="clear_firm">重置厂商</string>
  <string name="setting">设置</string>

  <string name="select_shop">选择店铺</string>
  <string name="select_firm">选择厂商</string>
  <string name="select_fix_device">盘点设备</string>
  <string name="logout">注销</string>
  <string name="login_clear">清除</string>

  <string name="btn_loading">等待</string>
  <string name="login_ok">确认</string>
  <string name="login_cancel">取消</string>
  <string name="ok">确认</string>
  <string name="cancel">取消</string>
  <string name="delete">删除</string>
  <string name="modify">修改</string>

  <string name="title_none">无</string>

  <string name="stock_fix">库存盘点</string>
  <string name="stock_out">采购退货</string>
  <string name="success_to_fix_stock">库存盘点成功！！单号：</string>
  <string name="query_stock_fix_difference">请在电脑或平板设置上查看库存差异单</string>
  <string name="success_to_reject_stock">采购退货成功！！单号：</string>
  <string name="print_stock_out">请在电脑上打印退货单据</string>

  <string name="refresh_top">己到达第一页，无需刷新</string>
  <string name="refresh_bottom">已到达最后一页，无需刷新</string>

  <!--suggestion-->
  <string name="please_input_firm">厂商，默认为空</string>
  <string name="please_input_barcode">请扫描条码</string>
  <string name="please_input_styleNumber">请输入款号</string>
  <string name="please_input_count">请输入数量</string>
  
  <string name="invalid_name_password">用户名或密码错误</string>
  <string name="login_user_active">该用户已登录系统，是否继续登录？</string>
  <string name="login_exceed_user">超过在线最大用户数限制，是否强制登录？注意：系统将踢出未在线时间最长用户</string>
  <string name="login_no_user_fire">没有用户可以踢出！！注意：管理员用户无法踢出，请确认管理员是否在线</string>
  <string name="login_out_of_service">用户不在服务时间内，请选择其它用户或在服务时间内登录该用户</string>

  <string name="network_unreachable">连接服务器失败，请确认该设备网络连接正常</string>
  <string name="network_invalid">网络故障，请检查网络连接情况，如网络正常，请注销该用户后重新登录</string>
  <string name="internal_error">系统内部错误，请重试或联系服务人员</string>
  <string name="authen_error">操作鉴权失败</string>
  <string name="database_error">数据库操作失败，请重试或联系服务人员</string>

  <string name="empty_barcode_stock">该条码对应的库存不存在，请确认条码是否正确</string>
  <string name="empty_good_big_type">系统没有定义货品大类，请定义货品大类后再进行操作</string>
  <string name="failed_to_fetch_stock">获取库存失败，请重试</string>
  <string name="more_than_stock">库存不足，无法退货，请核对后再退货</string>
  <string name="reject_with_different_firm">同一单内不允许不同厂商退货，请核对</string>
  <string name="reject_with_empty_firm">该货品无厂商，无法退货</string>
  <string name="reject_with_empty_price">该货品无进货价，无法退货</string>
  <string name="both_ctype_and_stock_not_bind">该货品没有绑定相应货品大类，请核对该货品信息</string>
  <string name="both_ctype_and_type_not_bind">没有绑定相应货品大类与品类，请先绑定</string>

  <string name="failed_to_get_user_info">获取用户权限信息失败</string>
  <string name="failed_to_get_employee">获取员工信息失败</string>
  <string name="failed_to_get_base_setting">获取系统配置信息失败</string>
  <string name="failed_to_get_retailer">获取客户信息失败</string>
  <string name="failed_to_get_color">获取颜色信息失败</string>
  <string name="failed_to_get_size_group">获取尺码组信息失败</string>
  <string name="failed_to_get_stock">获取库存信息失败</string>
  <string name="failed_to_get_brand">获取品牌信息失败</string>
  <string name="failed_to_get_good_type">获取货品类型信息失败</string>
  <string name="failed_to_get_firm">获取厂商信息失败</string>
  <string name="failed_to_get_good">获取货品信息失败</string>
  <string name="failed_to_get_color_kind">获取颜色类型信息失败</string>
  <string name="failed_to_get_main_dashboard">登录系统主界面失败</string>
  <string name="failed_to_get_big_type">获取货品大类失败</string>

  <string name="building">建设中&#8230;</string>

  <string name="openDrawer">open_drawer</string>
  <string name="closeDrawer">close_drawer</string>

  <string name="nav_stock_fix">盘点</string>
  <string name="nav_stock_out">退货</string>

</resources>
